crates/rstest-bdd/tests/ui_macros/skip_outside_step.rs
use rstest_bdd as bdd;

fn misuse_skip_macro() {
    bdd::skip!("outside step");
}
